# final-feedback

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  security-audit.yml
src/: db.rs  handlers.rs  main.rs  models.rs  templates.rs
static/: style.css
templates/: admin.html  admin_login.html  default_password_error.html  index.html  rate_limited.html  rate_limited_hard.html  success.html
