[package]
name = "final-feedback"
version = "0.1.0"
edition = "2021"
description = "FFXIV Performance Feedback Survey"

[dependencies]
actix-web = "4"
actix-files = "0.6"
actix-rt = "2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
askama = "0.12"
askama_actix = "0.14"
dotenv = "0.15"
env_logger = "0.11"
log = "0.4"
base64 = "0.22"
parking_lot = "0.12"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.13", features = ["json"] }
